--- a/custom.scss
+++ b/custom.scss
@@ -4,7 +4,7 @@
 $primary-color: #68977D; // Green
 $secondary-color: #976882; // Purple
 $background-color: #F4F1DE; // Light beige
-$text-color: #264653; // Dark blue
+$text-color: #020A0B; // Black
 
 
 /*-- scss:rules --*/
